--- a/Treasure/appsettings.json
+++ b/Treasure/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=139.59.233.184;Port=3306;Database=db;User=root;Password=password;TreatTinyAsBoolean=true;CharSet=utf8bm4;"
+    "DefaultConnection": "Server=139.59.233.184;Port=3306;Database=awing_test;User=root;Password=password;TreatTinyAsBoolean=true;CharSet=utf8bm4;"
   }
 }
